Adding the band pages

--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 	<div id="toolbar">
 			<table border="0" width="100%">
 				<td width="33%"><a href="login.php">Login</a></td>
-				<td width="33%"><a href="">Create Band</a></td>
+				<td width="33%"><a href="addBand.php">Create Band</a></td>
 				<td width="33%"><a href="addvenue.php">Create Venue</a></td>
 			</table>
 		</div>
