--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<div id="header"><h1>Ultimate Band Surf</h1></div>
+<div id="header"><h1><a href="index.php">Ultimate Band Surf</a></h1></div>
 	
 <div id="nav"><p><i>All your favorite bands and where to find them!</i></p></div>
 
