--- a/header.html
+++ b/header.html
@@ -4,9 +4,10 @@
 
 <div id="toolbar">
 	<table border="0" width="100%">
-		<td width="25%"><a href="login.php">Login</a></td>
-		<td width="25%"><a href="addBand.php">Create Band</a></td>
-		<td width="25%"><a href="addvenue.php">Create Venue</a></td>
-		<td width="25%"><a href="logout.php">Logout</a></td>
+		<td width="20%"><a href="account.php">Create Account</a></td>
+		<td width="20%"><a href="login.php">Login</a></td>
+		<td width="20%"><a href="addBand.php">Create Band</a></td>
+		<td width="20%"><a href="addvenue.php">Create Venue</a></td>
+		<td width="20%"><a href="logout.php">Logout</a></td>
 	</table>
 </div>
