--- a/logout.html
+++ b/logout.html
@@ -12,11 +12,11 @@
   </SCRIPT>
  </HEAD>
 
-
  <body onLoad="redireccionar()">
  <div id="wrap">
      <?php include("header.html"); ?>
-	<div id="main">	
+	 <?php include("sidebar.php"); ?>
+	<div>	
 	Logged out. Redirecting to index.php in 3 seconds...
 	</div>	
 	<?php include("footer.html"); ?>
