modified layout of index.php

--- a/header.html
+++ b/header.html
@@ -1,13 +1,15 @@
-<div id="header"><h1><a href="index.php">Ultimate Band Surf</a></h1></div>
+<div id="header"><h1>Ultimate Band Surf</h1></div>
+
 	
-<div id="nav"><p><i>All your favorite bands and where to find them!</i></p></div>
+<div id="header2"><p><i>All your favorite bands and where to find them!</i></p></div>
 
 <div id="toolbar">
 	<table border="0" width="100%">
-		<td width="20%"><a href="account.php">Create Account</a></td>
-		<td width="20%"><a href="login.php">Login</a></td>
-		<td width="20%"><a href="addBand.php">Create Band</a></td>
-		<td width="20%"><a href="addvenue.php">Create Venue</a></td>
-		<td width="20%"><a href="logout.php">Logout</a></td>
+		<td width="16.6%"><a href="index.php">Home</a></td>
+		<td width="16.6%"><a href="account.php">Create Account</a></td>
+		<td width="16.6%"><a href="login.php">Login</a></td>
+		<td width="16.6%"><a href="addBand.php">Create Band</a></td>
+		<td width="16.6%"><a href="addvenue.php">Create Venue</a></td>
+		<td width="16.6%"><a href="logout.php">Logout</a></td>
 	</table>
 </div>
