--- a/header.html
+++ b/header.html
@@ -1,12 +1,11 @@
 <div id="header"><h1>Ultimate Band Surf</h1></div>
-	
-<div id="nav"><p><i>All your favorite bands and where to find them!</i></p></div>
+
+<div id="header2"><p><i>All your favorite bands and where to find them!</i></p></div>
 
 <div id="toolbar">
 	<table border="0" width="100%">
-		<td width="25%"><a href="login.php">Login</a></td>
-		<td width="25%"><a href="addBand.php">Create Band</a></td>
-		<td width="25%"><a href="addvenue.php">Create Venue</a></td>
-		<td width="25%"><a href="logout.php">Logout</a></td>
+		<td width="33%"><a href="index.php">Home</a></td>
+		<td width="33%"><a href="account.php">Create Account</a></td>
+		<td width="33%"><a href="login.php">Login</a></td>
 	</table>
 </div>
