--- a/logout.html
+++ b/logout.html
@@ -1,5 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
  <HEAD>
   <TITLE>Add a Venue</TITLE>
 	<link rel="stylesheet" type="text/css" href="style.css" />
@@ -10,14 +12,20 @@
   </SCRIPT>
  </HEAD>
 
-
  <body onLoad="redireccionar()">
  <div id="wrap">
-     <?php include("header.html"); ?>
-	<div id="main">	
+     <?php
+		if(session_is_registered(myusername)){
+			include("headerUser.html");
+		} else {
+			include("headerGuest.html");
+		}
+	?>
+	 <?php include("sidebar.php"); ?>
+	<div>	
 	Logged out. Redirecting to index.php in 3 seconds...
 	</div>	
-	<div id="footer"><p>Footer here</p></div>
+	<?php include("footer.html"); ?>
 </div>
 </body>
 </html>
