--- a/logout.html
+++ b/logout.html
@@ -26,7 +26,7 @@
 	?>
 	 <?php include("sidebar.php"); ?>
 	<div>	
-	Logged out. Redirecting to index.php in 3 seconds...
+	<p color="white">Logged out. Redirecting to index.php in 3 seconds...</p>
 	</div>	
 	<?php include("footer.html"); ?>
 </div>
