changed formatting for login, logout, and create pages

--- a/headerGuest.html
+++ b/headerGuest.html
@@ -4,7 +4,7 @@
 
 <div id="toolbar">
 	<table border="0" width="100%">
-		<td width="25%"><a href="index.php">Home</a></td>
+		<td width="25%"></td>
 		<td width="25%"></td>
 		<td width="25%"><a href="account.php">Create Account</a></td>
 		<td width="25%"><a href="login.php">Login</a></td>
