--- a/headerUser.html
+++ b/headerUser.html
@@ -4,9 +4,9 @@
 
 <div id="toolbar">
 	<table border="0" width="100%">
-		<td width="25%"><a href="index.php">Home</a></td>
 		<td width="25%"><a href="addBand.php">Create Band</a></td>
 		<td width="25%"><a href="addvenue.php">Create Venue</a></td>
+		<td width="25%"></td>
 		<td width="25%"><a href="logout.php">Logout</a></td>
 	</table>
 </div>
