added a link in case the redirect doesnt work

--- a/logout.html
+++ b/logout.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<SCRIPT LANGUAGE="JavaScript">
   function redireccionar() {
-    setTimeout("location.href='index.php'", 3000);
+    setTimeout("location.href='index.php'", 1000);
   }
   </SCRIPT>
  </HEAD>
@@ -26,7 +26,8 @@
 	?>
 	 <?php include("sidebar.php"); ?>
 	<div>	
-	<p color="white">Logged out. Redirecting to homepage in 3 seconds...</p>
+	<p color="white">Logged out. Redirecting to homepage in a second...</p>
+	<p color="white">If that doesn't work, click <a href=index.php>here</a>.</p>
 	</div>	
 	<?php include("footer.html"); ?>
 </div>
