updated formats of all pages

--- a/logout.html
+++ b/logout.html
@@ -24,11 +24,14 @@
 			include("headerGuest.html");
 		}
 	?>
-	 <?php include("sidebar.php"); ?>
-	<div>	
-	<p color="white">Logged out. Redirecting to homepage in a second...</p>
-	<p color="white">If that doesn't work, click <a href=index.php>here</a>.</p>
-	</div>	
+	<div id="main">
+	 
+		<div>	
+			<p color="white">Logged out. Redirecting to homepage in a second...</p>
+			<p color="white">If that doesn't work, click <a href=index.php>here</a>.</p>
+		</div>
+	</div>
+	<?php include("sidebar.php"); ?>
 	<?php include("footer.html"); ?>
 </div>
 </body>
