added link to account management in menu bar

--- a/headerUser.html
+++ b/headerUser.html
@@ -5,9 +5,10 @@
 <div id="toolbar">
 	<table border="0" width="100%">
 		<td width="20%"></td>
-		<td width="20%"><a href="addBand.php">Create Band</a></td>
-		<td width="20%"><a href="addvenue.php">Create Venue</a></td>
-		<td width="20%"><a href="logout.php">Logout</a></td>
+		<td width="15%"><a href="addBand.php">Create Band</a></td>
+		<td width="15%"><a href="addvenue.php">Create Venue</a></td>
+		<td width="15%"><a href="logout.php">Logout</a></td>
+		<td width="15%"><a href="admin.php">Account Management</a></td>
 		<td width="20%"></td>
 	</table>
 </div>
