Replaced headerUser.html with headerUser.php

--- a/logout.html
+++ b/logout.html
@@ -19,7 +19,7 @@
  <div id="wrap">
      <?php
 		if(session_is_registered(myusername)){
-			include("headerUser.html");
+			include("headerUser.php");
 		} else {
 			include("headerGuest.html");
 		}
