updated the layout

--- a/headerGuest.html
+++ b/headerGuest.html
@@ -1,13 +1,27 @@
-<div id="header"><h1><a href="index.php">Ultimate Band Surf</a></h1></div>
+<div id="header"><h1><a href="index.php"><img src=images/logo2.png></a></h1></div>
 
 <div id="header2"><p><i>All your favorite bands and where to find them!</i></p></div>
 
 <div id="toolbar">
-	<table border="0" width="100%">
-		<td width="20%"></td>
-		<td width="20%"><a href="searchBand.php">Find Band</a></td>
-		<td width="20%"><a href="searchVenue.php">Find Venue</a></td>
-		<td width="20%"><a href="account.php">Create Account</a> / <a href="login.php">Login</a></td>
-		<td width="20%"></td>
-	</table>
+<a href="searchBand.php">Find Band</a> | 
+<a href="searchVenue.php">Find Venue</a> | 
+<a href="account.php">Create Account</a> / <a href="login.php">Login</a>
+<br>
+<table align=center>
+<tr>
+<td>
+<form method = "post" action= "searchBand.php">
+<input type = "text" id="searchB" name = "searchB" value="Search for a band"/>
+<input type = "submit" value= "go" name="submit" />
+</form>
+</td>
+<td>
+<form method = "post" action= "searchVenue.php">
+<input type = "text" id="searchV" name = "searchV" value="Search for a venue"/>
+<input type = "submit" value= "go" name="submit"/>
+</form>
+</td>
+</tr>
+</table>
+
 </div>
