text erases when search box clicked

--- a/headerGuest.html
+++ b/headerGuest.html
@@ -1,3 +1,13 @@
+<script type="text/javascript"> 
+function make_blank1()
+{
+document.form1.searchB.value ="";
+}
+function make_blank2()
+{
+document.form2.searchV.value ="";
+}
+</script>
 <div id="header"><h1><a href="index.php"><img src=images/logo2.png></a></h1></div>
 
 <div id="header2"><p><i>All your favorite bands and where to find them!</i></p></div>
@@ -10,14 +20,14 @@
 <table align=center>
 <tr>
 <td>
-<form method = "post" action= "searchBand.php">
-<input type = "text" id="searchB" name = "searchB" value="Search for a band"/>
+<form name="form1" method = "post" action= "searchBand.php">
+<input type = "text" id="searchB" name = "searchB" value="Search for a band" onclick="make_blank1();"/>
 <input type = "submit" value= "go" name="submit" />
 </form>
 </td>
 <td>
-<form method = "post" action= "searchVenue.php">
-<input type = "text" id="searchV" name = "searchV" value="Search for a venue"/>
+<form name="form2" method = "post" action= "searchVenue.php">
+<input type = "text" id="searchV" name = "searchV" value="Search for a venue" onclick="make_blank2();"/>
 <input type = "submit" value= "go" name="submit"/>
 </form>
 </td>
