fixed a search bug (was not using post)

--- a/headerGuest.html
+++ b/headerGuest.html
@@ -2,19 +2,23 @@
 function make_blank1()
 {
 document.form1.searchB.value ="";
+document.form1.hidden.value="true";
 }
 function make_blank2()
 {
 document.form2.searchV.value ="";
+document.form1.hidden.value="true";
 }
 function refill(type){
 	if(type == "venue"){
 		if(document.form2.searchV.value==""){
 			document.form2.searchV.value="Search for a venue";
+			document.form2.hidden.value="false";
 		}
 	}else if(type == "band"){
 		if(document.form1.searchB.value ==""){
 			document.form1.searchB.value ="Search for a band";
+			document.form1.hidden.value="false";
 		}
 	}
 }
@@ -32,12 +36,14 @@ function refill(type){
 <tr>
 <td>
 <form name="form1" method = "post" action= "searchBand.php">
+<input type= "hidden" id="hidden" name="hidden" value="false" />
 <input type = "text" id="searchB" name = "searchB" value="Search for a band" onclick="make_blank1();" onBlur="refill('band')" />
 <input type = "submit" value= "go" name="submit" />
 </form>
 </td>
 <td>
 <form name="form2" method = "post" action= "searchVenue.php">
+<input type= "hidden" id="hidden" name="hidden" value="false" />
 <input type = "text" id="searchV" name = "searchV" value="Search for a venue" onclick="make_blank2();" onBlur="refill('venue')" />
 <input type = "submit" value= "go" name="submit"/>
 </form>
