--- a/logout.html
+++ b/logout.html
@@ -6,13 +6,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
  <HEAD>
-  <TITLE>Add a Venue</TITLE>
+  <TITLE>Log Out</TITLE>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<SCRIPT LANGUAGE="JavaScript">
   function redireccionar() {
     setTimeout("location.href='index.php'", 1000);
   }
   </SCRIPT>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
  </HEAD>
 
  <body onLoad="redireccionar()">
